--- a/wokwi.toml
+++ b/wokwi.toml
@@ -1,4 +1,4 @@
 [wokwi]
 version = 1
-firmware = 'build/Semaforo.uf2'
-elf = 'build/Semaforo.elf'
+firmware = 'build/OneShotRGB.uf2'
+elf = 'build/OneShotRGB.elf'
